Actual initial alignment fix on mobile.

--- a/code-atlus/src/components/Home/Home.css
+++ b/code-atlus/src/components/Home/Home.css
@@ -11,7 +11,6 @@
   transition: all 0.3s ease;
   margin-right: 10px;
   margin-left: 10px;
-  margin-bottom: 100px;
 }
 
 .mainpage-buttons:hover {
@@ -19,11 +18,12 @@
   transform: scale(1.10);
 }
 
+
+
 .titlesubdiv {
   display: flex;
   align-items: center;
-  gap: 20px;
-  margin-bottom: 50px;  
+  gap: 20px; 
   margin-top: 30px;
 }
 
@@ -37,5 +37,6 @@
   border-radius: 100px; 
   width: 200px;
   margin-top: 15px;
+  margin-right: 95px;
   flex-shrink: 0;
 }
