--- a/code-atlus/src/components/MainPage/MainPage.css
+++ b/code-atlus/src/components/MainPage/MainPage.css
@@ -45,7 +45,7 @@ body {
   gap: 0px;
   flex-grow: 1;
   color: white;
-  padding: 30px;
+  padding: 20px;
   box-sizing: border-box;
   border-radius: 6px;
   width: 80%;
