--- a/code-atlus/src/components/Sidebar/Sidebar.css
+++ b/code-atlus/src/components/Sidebar/Sidebar.css
@@ -24,7 +24,8 @@
 
 .sidebar-seperator-after {
   border-top: 3px solid #cccccc;
-  padding-top: 20px;
+  padding-top: 10px;
+  margin-bottom: -10px;
 }
 
 .sidebar-buttons {
